--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<!-- <h1>Hello</h1> -->
+	<div id="sizeInfo"></div>
     <script type="text/javascript" src="./script.js">
 </script>
 
